<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>optoforce_wrapper</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper for Optoforce 3-axis force sensor.</description>
  <maintainer email="jasiek491@gmail.com">Jan Kaniuka</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
